--- a/test/index.html
+++ b/test/index.html
@@ -10,11 +10,10 @@
 	<div id="mocha"></div>
 	<script>
 		var mocha = require('mocha')
-  	var Result = require('..')
 		mocha.setup('bdd')
 		mocha.timeout(200)
 
-		require('./result-core.test')(Result)
+		require('./index')
 
 		mocha.run(function(){
 			console.log('Done!')
