--- a/test/index.html
+++ b/test/index.html
@@ -1,4 +1,3 @@
-
 <title>result-core tests</title>
 <link rel="stylesheet" href="../node_modules/hydro-html/index.css">
 
@@ -18,5 +17,5 @@
 
   require('./result-core.test')
 
-  hydro.run(function(e){ if (e) throw e })
+  hydro.run()
 </script>
